src/main/java/com/example/redditclone/validation/SaveValidation.java
package com.example.redditclone.validation;

public interface SaveValidation {
}
